# multi_binary

./: Cargo.toml  README.md
src/: main.rs
